feat: Laboratorio da Aula 3 finalizado

--- a/Aula_03/index.html
+++ b/Aula_03/index.html
@@ -79,7 +79,60 @@
     <hr />
 
     <a href="tel:123456789">Liga-me</a>
+    <hr />
 
     <!-- 4. Tabelas e Gráficos -->
+
+    <!-- Observação & Teste -->
+    <table border="1">
+     <th>
+      <td>Nome</td>
+     </th>
+     <td>
+      <img src="imagens/lobo.jpg" alt="">
+     </td>
+    </table>
+    <hr />
+
+    <!--  Implementação -->
+    <table border="1">
+      <caption>
+        Lista de Funcionários
+      </caption>
+      <thead>
+        <tr>
+          <th scope="col">Nome</th>
+          <th scope="col">Idade</th>
+          <th scope="col">Profissão</th>
+          <th scope="col">Salário</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Danilson Sanches</td>
+          <td>43</td>
+          <td>Estudante</td>
+          <td>984,00</td>
+        </tr>
+        <tr>
+          <td>Gabriela Varela</td>
+          <td>32</td>
+          <td>Médica</td>
+          <td>1.200,99</td>
+        </tr>
+        <tr>
+          <td>João Santos</td>
+          <td>24</td>
+          <td>Bombeiro</td>
+          <td>1.024,00</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>Total</td>
+          <td colspan="3">3.208,99</td>
+        </tr>
+      </tfoot>
+    </table>
   </body>
 </html>
